# snow

./: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/analysis/: lexer.cpp  lexer.h  token.cpp  token.h
